Updated logos, favicon, login

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>Angular - Demo1</title>
+  <title>SOCIALBOND</title>
   <base href="/"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="shortcut icon" href="./assets/media/logos/favicon.ico"/>
+  <!--./assets/media/logos/favicon.ico-->
+  <link rel="shortcut icon" href="./assets/media/logos/SB_favicon.ico"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700">
   <!-- SPLASH SCREEN-->
   <link
