Added rzp payment module

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <!--./assets/media/logos/favicon.ico-->
   <link rel="shortcut icon" href="./assets/media/logos/SB_favicon.ico"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700">
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <!-- SPLASH SCREEN-->
   <link
     rel="stylesheet"
@@ -18,7 +19,8 @@
 </head>
 <body root id="kt_body" class="mat-typography">
 <div id="splash-screen" class="splash-screen">
-  <img src="./assets/media/logos/logo-1.svg" alt="Metronic logo"/>
+  <!-- ./assets/media/logos/logo-1.svg -->
+  <img src="./assets/media/logos/SB_logo.png" alt="SOCIALBOND logo"/>
   <span>Loading ...</span>
 </div>
 </body>
