--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <title>SOCIALBOND</title>
-  <base href="/"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <!--./assets/media/logos/favicon.ico-->
-  <link rel="shortcut icon" href="./assets/media/logos/SB_favicon.ico"/>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700">
-  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-  <!-- SPLASH SCREEN-->
-  <link
-    rel="stylesheet"
-    id="layout-styles-anchor"
-    href="./assets/splash-screen.css"
-  />
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-</head>
-<body root id="kt_body" class="mat-typography">
-<div id="splash-screen" class="splash-screen">
-  <!-- ./assets/media/logos/logo-1.svg -->
-  <img src="./assets/media/logos/SB_logo.png" alt="SOCIALBOND logo"/>
-  <span>Loading ...</span>
-</div>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>SOCIOBOND</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--./assets/media/logos/favicon.ico-->
+    <link rel="shortcut icon" href="./assets/media/logos/SB_favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"
+    />
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <!-- SPLASH SCREEN-->
+    <link
+      rel="stylesheet"
+      id="layout-styles-anchor"
+      href="./assets/splash-screen.css"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+  </head>
+  <body root id="kt_body" class="mat-typography">
+    <div id="splash-screen" class="splash-screen">
+      <!-- ./assets/media/logos/logo-1.svg -->
+      <img src="./assets/media/logos/SB_logo.png" alt="SOCIOBOND logo" />
+      <span>Loading ...</span>
+    </div>
+  </body>
 </html>
